--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,12 @@
     <meta name="description" content="">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Modern JavaScript</title>
+    <title>Ninja Quiz</title>
     <link rel="apple-touch-icon" href="/assets/images/favicons/apple-touch-icon.png">
     <link rel="icon" href="/assets/images/favicons/favicon.ico">
     <!-- Place favicon.ico in the root directory -->
     <!-- build:css styles/main.css -->
-    <link rel="stylesheet" href="/assets/styles/sandbox.css">
+    <link rel="stylesheet" href="/assets/styles/app.css">
     <!-- endbuild -->
   </head>
   <body>
@@ -18,8 +18,8 @@
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
     <main>
-      <section class="header">
-        <nav class="navbar container" role="navigation" aria-label="main navigation">
+      <header class="header">
+        <nav class="navbar container-fluid" role="navigation" aria-label="main navigation">
           <div class="navbar-brand">
             <a class="navbar-item" href="/">
               <img src="/assets/images/JavascriptPlain.svg" width="150" height="150">
@@ -33,134 +33,89 @@
             </a>
           </div>
 
-          <div id="navbarBasicExample" class="navbar-menu">
+          <div id="navbarMenu" class="navbar-menu">
             <div class="navbar-start">
               <a class="navbar-item" href="/">Home</a>
               <a class="navbar-item" href="javascript:void()">Documentation</a>
             </div>
-
-            <div class="navbar-end">
-              <div class="navbar-item">
-                <div class="buttons">
-                  <a class="button is-primary"><strong>Sign up</strong></a>
-                  <a class="button is-light">Log in</a>
-                </div>
-              </div>
-            </div>
           </div>
         </nav>
-      </section>
+      </header>
 
-      <section class="hero is-danger is-large">
+      <section class="hero is-large is-primary is-bold has-text-centered">
         <div class="hero-body">
           <div class="container">
-            <h1 class="title">Modern JavaScript</h1>
-            <h2 class="subtitle">from Novice to Ninja</h2>
+            <h1 class="title">Ninja Quiz</h1>
+            <h2 class="subtitle">By Mathew Teague</h2>
           </div>
         </div>
       </section>
 
-      <section class="section content">
-        <div class="container content__top">
-          <div class="columns">
-            <div class="column">
-              <h3>HTML5 Boilerplate</h3>
-              <p>Nullam id dolor id nibh ultricies vehicula ut id elit. Donec ullamcorper nulla non metus auctor
-                fringilla. Sed posuere consectetur est at lobortis. Nullam id dolor id nibh ultricies vehicula ut id elit.
-                Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
-            </div>
-            <div class="column">
-              <h3>Test data</h3>
-              <ul class="testlist"></ul>
-            </div>
-          </div>
-        </div>
-        <div class="container content__middle">
-          <div class="columns">
-            <div class="column">
-              <h3>Lorem Ipsum</h3>
-              <p>lorem error ipsum</p>
-              <p>lorem success ipsum</p>
-              <p>lorem ipsum lorem</p>
-              <p>lorem ipsum success</p>
-              <p>error lorem ipsum</p>
-              <p>lorem ipsum lorem</p>
-              <p>lorem ipsum error</p>
-              <p>success lorem ipsum</p>
-            </div>
-          </div>
-          <div class="columns">
-            <div class="column">
-              <article>
-                <p>new sibling</p>
-                <h2>article title</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                <div>written by the net ninja</div>
-              </article>
-              <hr>
-              <h3>Todos</h3>
-              <ul class="todoList">
-                <li>buy milk</li>
-                <li>read a book</li>
-                <li>play the guitar</li>
-                <li>pay the bills :(</li>
-              </ul>
-              <button class="button is-info">Add New</button>
-              <button class="button is-danger">Remove</button>
-            </div>
-          </div>
-        </div>
-        <div class="container content__bottom">
-          <div class="columns">
-            <div class="column">
-              <h3>Lorem Ipsum</h3>
-              <p style="color: black;">Nullam id dolor id nibh ultricies vehicula ut id elit. Donec ullamcorper nulla non metus auctor
-                fringilla. Sed posuere consectetur est at lobortis. Nullam id dolor id nibh ultricies vehicula ut id elit.
-                Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
-              <p>Cras mattis consectetur purus sit amet fermentum.</p>
-              <a href="https://google.co.uk">Google</a>
-
-              <button class="pop button is-primary is-large">Popup Button</button>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="section">
+      <section class="section container">
         <div class="columns">
-          <div class="column"></div>
           <div class="column">
-            <form class="signup-form">
+            <h3 class="title">Quiz Questions...</h3>
+            <form class="quiz-form">
               <div class="field">
-                <p class="control has-icons-left has-icons-right">
-                  <input class="input" type="email" placeholder="Email">
-                  <span class="icon is-small is-left">
-                    <i class="fas fa-envelope"></i>
-                  </span>
-                  <span class="icon is-small is-right">
-                    <i class="fas fa-check"></i>
-                  </span>
-                </p>
+                <p class="question">1. How do you give a ninja directions?</p>
+                <div class="control">
+                  <label class="radio">
+                    <input type="radio" name="q1" value="A" checked>
+                    Show them a map
+                  </label>
+                  <label class="radio">
+                    <input type="radio" name="q1" value="B">
+                    Don't worry a ninja will find you
+                  </label>
+                </div>
               </div>
               <div class="field">
-                <p class="control has-icons-left">
-                  <input class="input"  type="text" id="username" placeholder="username">
-                  <span class="icon is-small is-left">
-                    <i class="fas fa-lock"></i>
-                  </span>
-                </p>
+                <p class="question">2. If a ninja has 3 apples, then gives one to Mario & one to Yoshi, how many apples
+                  does the ninja have left?</p>
+                <div class="control">
+                  <label class="radio">
+                    <input type="radio" name="q2" value="A" checked>
+                    1 Apple
+                  </label>
+                  <label class="radio">
+                    <input type="radio" name="q2" value="B">
+                    3 apples, and two corpse
+                  </label>
+                </div>
               </div>
               <div class="field">
-                <p class="control">
-                  <input class="button is-link" type="submit" value="submit">
-                  <p class="feedback"></p>
-                </p>
+                <p class="question">3. How do you know when you've met a ninja?</p>
+                <div class="control">
+                  <label class="radio">
+                    <input type="radio" name="q3" value="A" checked>
+                    You'll recognize the outfit
+                  </label>
+                  <label class="radio">
+                    <input type="radio" name="q3" value="B">
+                    The grim reaper will tell you
+                  </label>
+                </div>
+              </div>
+              <div class="field">
+                <p class="question">4. What's a ninja's favourite array method?</p>
+                <div class="control">
+                  <label class="radio">
+                    <input type="radio" name="q4" value="A" checked>
+                    forEach()
+                  </label>
+                  <label class="radio">
+                    <input type="radio" name="q4" value="B">
+                    slice()
+                  </label>
+                </div>
+              </div>
+              <div class="field">
+                <div class="control">
+                  <button class="button is-link is-medium">Submit</button>
+                </div>
               </div>
             </form>
           </div>
-          <div class="column"></div>
         </div>
       </section>
 
@@ -175,22 +130,9 @@
           </div>
         </div>
       </footer>
-
-      <div class="popup-wrapper">
-
-        <div class="popup">
-          <div class="popup-close">x</div>
-          <div class="popup-content">
-            <h2>NINJA SALE!!</h2>
-            <p>50% off all ninja clothing. don't miss out!</p>
-            <a href="#">view clothing</a>
-          </div>
-        </div>
-
-      </div>
     </main>
     <!-- build:js scripts/main.js -->
-    <script src="/assets/js/sandbox.js"></script>
+    <script src="/assets/js/app.js"></script>
     <!-- endbuild -->
   </body>
 </html>
