created quiz and applied styling and js animations

--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,18 @@
         </div>
       </section>
 
+      <section class="container-fluid score" aria-expanded="false">
+        <div class="container section">
+          <div class="columns">
+            <div class="column"></div>
+            <div class="column score__content">
+              <h3 class="score__text">You have scored <span class="score__number">0%</span></h3>
+            </div>
+            <div class="column"></div>
+          </div>
+        </div>
+      </section>
+
       <section class="section container">
         <div class="columns">
           <div class="column">
@@ -119,7 +131,7 @@
         </div>
       </section>
 
-      <footer class="footer">
+      <footer class="section">
         <div class="container">
           <div class="content has-text-centered">
             <p>Site by <a href="https://yewtreeweb.co.uk" target="_blank">Mathew Teague</a></p>
