--- a/src/index.html
+++ b/src/index.html
@@ -18,132 +18,21 @@
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
     <main>
-      <header class="header">
-        <nav class="navbar container-fluid" role="navigation" aria-label="main navigation">
-          <div class="navbar-brand">
-            <a class="navbar-item" href="/">
-              <img src="/assets/images/JavascriptPlain.svg" width="150" height="150">
-            </a>
-
-            <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
-              data-target="navbarBasicExample">
-              <span aria-hidden="true"></span>
-              <span aria-hidden="true"></span>
-              <span aria-hidden="true"></span>
-            </a>
-          </div>
-
-          <div id="navbarMenu" class="navbar-menu">
-            <div class="navbar-start">
-              <a class="navbar-item" href="/">Home</a>
-              <a class="navbar-item" href="javascript:void()">Documentation</a>
-            </div>
-          </div>
-        </nav>
-      </header>
-
-      <section class="hero is-large is-primary is-bold has-text-centered">
-        <div class="hero-body">
-          <div class="container">
-            <h1 class="title">Ninja Quiz</h1>
-            <h2 class="subtitle">By Mathew Teague</h2>
-          </div>
-        </div>
-      </section>
-
-      <section class="container-fluid score" aria-expanded="false">
-        <div class="container section">
-          <div class="columns">
-            <div class="column"></div>
-            <div class="column score__content">
-              <h3 class="score__text">You have scored <span class="score__number">0%</span></h3>
-            </div>
-            <div class="column"></div>
-          </div>
-        </div>
-      </section>
-
-      <section class="section container">
-        <div class="columns">
-          <div class="column">
-            <h3 class="title">Quiz Questions...</h3>
-            <form class="quiz-form">
-              <div class="field">
-                <p class="question">1. How do you give a ninja directions?</p>
-                <div class="control">
-                  <label class="radio">
-                    <input type="radio" name="q1" value="A" checked>
-                    Show them a map
-                  </label>
-                  <label class="radio">
-                    <input type="radio" name="q1" value="B">
-                    Don't worry a ninja will find you
-                  </label>
-                </div>
-              </div>
-              <div class="field">
-                <p class="question">2. If a ninja has 3 apples, then gives one to Mario & one to Yoshi, how many apples
-                  does the ninja have left?</p>
-                <div class="control">
-                  <label class="radio">
-                    <input type="radio" name="q2" value="A" checked>
-                    1 Apple
-                  </label>
-                  <label class="radio">
-                    <input type="radio" name="q2" value="B">
-                    3 apples, and two corpse
-                  </label>
-                </div>
-              </div>
-              <div class="field">
-                <p class="question">3. How do you know when you've met a ninja?</p>
-                <div class="control">
-                  <label class="radio">
-                    <input type="radio" name="q3" value="A" checked>
-                    You'll recognize the outfit
-                  </label>
-                  <label class="radio">
-                    <input type="radio" name="q3" value="B">
-                    The grim reaper will tell you
-                  </label>
-                </div>
-              </div>
-              <div class="field">
-                <p class="question">4. What's a ninja's favourite array method?</p>
-                <div class="control">
-                  <label class="radio">
-                    <input type="radio" name="q4" value="A" checked>
-                    forEach()
-                  </label>
-                  <label class="radio">
-                    <input type="radio" name="q4" value="B">
-                    slice()
-                  </label>
-                </div>
-              </div>
-              <div class="field">
-                <div class="control">
-                  <button class="button is-link is-medium">Submit</button>
-                </div>
-              </div>
-            </form>
-          </div>
-        </div>
-      </section>
-
+      
+      
       <footer class="section">
         <div class="container">
           <div class="content has-text-centered">
             <p>Site by <a href="https://yewtreeweb.co.uk" target="_blank">Mathew Teague</a></p>
             <p>Content from tutorial series by <a href="https://www.udemy.com/modern-javascript-from-novice-to-ninja/"
                 target="_blank">iamshaunjp</a></p>
-            <p><a href="https://bulma.io/" target="_blank"><img src="https://bulma.io/images/made-with-bulma.png"
-                  alt="Made with Bulma" width="128" height="24"></a></p>
+            <p><a href="https://bulma.io/" target="_blank">Bootstrap</a></p>
           </div>
         </div>
       </footer>
     </main>
     <!-- build:js scripts/main.js -->
+    <script src="/assets/js/bootstrap.bundle.min.js"></script>
     <script src="/assets/js/app.js"></script>
     <!-- endbuild -->
   </body>
