creating adding and removeing events

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,8 @@
     <!-- build:css styles/main.css -->
     <link rel="stylesheet" href="/assets/styles/app.css">
     <!-- endbuild -->
+    <!-- <script src="/assets/js/fontawesome-pro/js/all.min.js" async></script> -->
+    <script src="https://kit.fontawesome.com/2758b5aa10.js" crossorigin="anonymous" async></script>
   </head>
   <body>
     <!--[if IE]>
@@ -19,10 +21,39 @@
     <![endif]-->
     <main>
       
-      
-      <footer class="section">
+      <div class="container">
+
+        <header class="text-center text-light my-4">
+          <h1 class="mb-4">Todo List</h1>
+          <form class="search">
+            <input class="form-control m-auto" type="text" name="search" placeholder="search todos" />
+          </form>
+        </header>
+
+        <ul class="list-group todos mx-auto text-light">
+          <li class="list-group-item d-flex justify-content-between align-items-center">
+            <span>play mariokart</span>
+            <i class="far fa-trash-alt delete"></i>
+          </li>
+          <li class="list-group-item d-flex justify-content-between align-items-center">
+            <span>defeat ganon in zelda</span>
+            <i class="far fa-trash-alt delete"></i>
+          </li>
+          <li class="list-group-item d-flex justify-content-between align-items-center">
+            <span>make a veggie pie</span>
+            <i class="far fa-trash-alt delete"></i>
+          </li>
+        </ul>
+
+        <form class="add text-center my-4">
+          <label class="text-light">Add a new todo...</label>
+          <input class="form-control m-auto" type="text" name="add" />
+        </form>
+
+      </div>
+      <footer class="container-fluid">
         <div class="container">
-          <div class="content has-text-centered">
+          <div class="content text-center">
             <p>Site by <a href="https://yewtreeweb.co.uk" target="_blank">Mathew Teague</a></p>
             <p>Content from tutorial series by <a href="https://www.udemy.com/modern-javascript-from-novice-to-ninja/"
                 target="_blank">iamshaunjp</a></p>
@@ -32,7 +63,6 @@
       </footer>
     </main>
     <!-- build:js scripts/main.js -->
-    <script src="/assets/js/bootstrap.bundle.min.js"></script>
     <script src="/assets/js/app.js"></script>
     <!-- endbuild -->
   </body>
