fixed no todos box bug

--- a/src/index.html
+++ b/src/index.html
@@ -35,9 +35,8 @@
           </form>
         </header>
 
-        <ul class="list-group todos mx-auto text-light">
-          <li class="list-group-item list-group-item--default d-flex justify-content-between align-items-center">No items in list. Add a todo!</li>
-        </ul>
+        <p class="no-todos d-flex justify-content-center align-items-center">No items in list. Add a todo!</p>
+        <ul class="list-group todos mx-auto text-light"></ul>
 
         <form class="add text-center my-4">
           <label class="text-light">Add a new todo...</label>
