--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
 
         <header class="text-center text-light my-4">
           <h1 class="mb-4">Todo List</h1>
-          <p class="tagline">With added localStorage</p>
+          <p class="tagline">With added localForage</p>
           <form class="search">
             <input class="form-control m-auto" type="text" name="search" placeholder="search todos" />
           </form>
